# recipe-app-api

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/app/: settings.py  urls.py  wsgi.py
app/core/: admin.py  models.py
app/core/migrations/: 0001_initial.py  0002_tag.py  0003_ingredient.py  0004_recipe.py
app/core/tests/: test_admin.py  test_models.py
app/recipe/: serializers.py  urls.py  views.py
app/recipe/tests/: test_ingridients.py  test_recipe_api.py  tests_tags_api.py
app/user/: serilizers.py  urls.py  views.py
app/user/tests/: test_user_api.py
