[tool.poetry]
name = "recipe-app"
version = "1"
description = "api to upload recipes"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7"
Django = ">=2.1.0,<2.3.0"
djangorestframework = "3.9.1"
pre-commit = "^2.3.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.6.0"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

